syntax = "proto3";

package instance;

// Message definitions
message Instance {
    string name = 1;
    string engine = 2;
}

message CreateInstanceRequest {
    string engine_type = 1;
    string root_path = 2;
}

message CreateInstanceResponse {
    string instance = 1;
}

message GetInstanceRequest {
    string instance_name = 1;
}

message GetInstanceResponse {
    string instance = 1; // Returning the instance
}

message GetAllInstancesRequest {
    string message = 1;
}

message GetAllInstancesResponse {
    repeated Instance instances = 1;
}

service InstanceService {
    rpc CreateInstance(CreateInstanceRequest) returns (CreateInstanceResponse);
    rpc GetInstance(GetInstanceRequest) returns (GetInstanceResponse);
    rpc GetAllInstances(GetAllInstancesRequest) returns (GetAllInstancesResponse);
}
